Fix up the font and alignment on header
Aligning the logo and links along with fixing font present a neat header

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,13 @@ img {
 
 .header-text {
     margin-top: 20px;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.header-links {
+    font-size: 16px;
+    margin-top: 8px;
 }
 
 a {
